test_regress/t/t_const_overflow_bad.out
%Error: t/t_const_overflow_bad.v:8: Too many digits for 94 bit number: 94'd123456789012345678901234567890
%Error: t/t_const_overflow_bad.v:10: Too many digits for 8 bit number: 8'habc
%Error: t/t_const_overflow_bad.v:11: Too many digits for 6 bit number: 6'o1234
%Error: t/t_const_overflow_bad.v:12: Too many digits for 3 bit number: 3'b1111
%Error: t/t_const_overflow_bad.v:18: Too many digits for 129 bit number: 129'hdeadbeefc001f00ddeadbeefc001f00ddeadbeefc001f00ddeadbeefc001f00d
%Error: Exiting due to
